# peepapp-core

./: .gitignore  Dockerfile  README.md  diagram.d2  pyproject.toml  requirements.txt  setup.py  trackers
peepapp_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
peepapp_core/analysis/: apk_signature.py  certificate.py  static_analysis.py  test_peepapp_analyze.py
peepapp_core/helper/: connector.py
