[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peepapp-core"
version = "0.1.1"
description = "Core library for PeepApp, a SAST tool for analyzing Android apps and enumerating trackers and permissions."
authors = [
    { name = "oatkrs", email = "utkarshparashar05@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2",
    "black>=23.3.0",
    "isort>=5.10.1"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
